__templates/kubernetes/certmanager.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: certmanager
# ------------------------------------------------------------------------------
